--- a/index.html
+++ b/index.html
@@ -43,19 +43,9 @@
     </header>
 
     <section class="bag-shopping" id="bag-shopping">
+        <h2>shopping cart</h2>
             <div class="cards-products" id="cards-products">
-                <div class="card-product" id="card-product">
-                    <div><img src="img/women-card.png"></div>
-                    <div>
-                        <h2>Women Hoddie</h2>
-                        <div class="stock-container">
-                            <ion-icon name="remove-outline"></ion-icon>
-                            <span>1</span>
-                            <ion-icon name="add-outline"></ion-icon>
-                        </div>
-                    </div>
-                    <div class="remove" id="remove"><ion-icon name="bag-remove-outline"></ion-icon></div>
-                </div>
+                
             </div>
             <div class="remove-button">
                 <div id="close">
@@ -90,7 +80,7 @@
 
         <section class="products" id="products">
             <h2>STORE</h2>
-            <div class="cards-container">
+            <div class="cards-container" id="cards-container">
                 <div class="cards" id="women">
                     <div class="img-container">
                         <img src="img/women-card.png">
