--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 
     <section class="bag-shopping" id="bag-shopping">
             <div class="cards-products" id="cards-products">
-                
             </div>
-            <div class="remove-button">
+            <div class="remove-button" id="prueba">
                 <div id="close">
                     <ion-icon name="close-outline"></ion-icon>
                     <p>close</p>
@@ -90,7 +89,7 @@
                             <p>stock <span>10</span></p>
                         </div>
                         <div class="agree">
-                            <ion-icon name="bag-add-outline"></ion-icon>
+                            &#43;
                         </div>
                     </div>
                 </div>
@@ -101,10 +100,10 @@
                     <div class="description-container">
                         <div class="text-container">
                             <h2>men hoodie $25</h2>
-                            <p>stock <span>10</span></p>
+                            <p>stock <span>5</span></p>
                         </div>
                         <div class="agree">
-                            <ion-icon name="bag-add-outline"></ion-icon>
+                            &#43;
                         </div>
                     </div>
                 </div>
@@ -115,10 +114,10 @@
                     <div class="description-container">
                         <div class="text-container">
                             <h2>kid hoodie $15</h2>
-                            <p>stock <span>10</span></p>
+                            <p>stock <span>18</span></p>
                         </div>
                         <div class="agree">
-                            <ion-icon name="bag-add-outline"></ion-icon>
+                            &#43;
                         </div>
                     </div>
                 </div>
@@ -128,18 +127,22 @@
     </main>
 
     <footer>
-        <div class="text-footer">
-            <h2>Our Information</h2>
-            <p>Lima - Perú</p>
-            <h2>About Us</h2>
-            <p>Support Center</p>
-            <p>Customer Support</p>
-        </div>
-        <div class="social-media">
-            <p>Social Media</p>
-            <ion-icon name="logo-facebook"></ion-icon>
-            <ion-icon name="logo-instagram"></ion-icon>
-            <ion-icon name="logo-whatsapp"></ion-icon>
+        <div class="text-information">
+            <div class="information">
+                <h2>Our Information</h2>
+                <p>Lima - Peru</p>
+            </div>
+            <div class="us">
+                <h2>About Us</h2>
+                <p>Support Center</p>
+                <p>Customer Support</p>
+            </div>
+            <div class="social-media">
+                <h2>Social Media</h2>
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+                <ion-icon name="logo-whatsapp"></ion-icon>
+            </div>
         </div>
         <div class="copyright">
             <p>&#169;DALU. | All rights reserved </p>
